# ai_assistent_telegram

./: config.py  docker_dev  main.py  pyproject.toml
bot/: config.py  main.py
bot/controler/: __init__.py  controler.py  user_context.py
bot/controler/commands/: __init__.py  weather_command.py
bot/controler/commands/utils/: __init__.py  date_converter.py
bot/ml/: controler.py  user_context.py
bot/ml/commands/utils/: data_conv.py
bot/ml/model/: model.py
ml/: controler.py  user_context.py
ml/commands/: __init__.py  example_comand.py
ml/commands/utils/: data_conv.py
ml/model/: __init__.py  config_model.py  model.py
